--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav>
-      <a href="/index.html" class="logo">Company</a>
+      <a href="index.html" class="logo">Company</a>
 
       <div id="burger" class="burger">
           <div></div>
@@ -25,15 +25,15 @@
 
       <div class="nav-links">
           <div class="nav-product">
-              <a href="/gallery.html">გალერეა</a>
-              <a href="/decoration.html">ყველა პროდუქცია</a>
-              <a href="/contact.html">კონტაქტი</a>
+              <a href="gallery.html">გალერეა</a>
+              <a href="decoration.html">ყველა პროდუქცია</a>
+              <a href="contact.html">კონტაქტი</a>
           </div>
 
           <div class="header-actions">
               <a href="#" class="cart-text">ჩემი შეკვეთები</a>
               <div class="cart">
-                  <a href="/cart.html" class="cart-text">კალათა</a>
+                  <a href="cart.html" class="cart-text">კალათა</a>
               </div>
               <form method="POST" action="/logout" style="padding: 10px;">
                 <input type="submit" class="logout-btn" value="გასვლა">
