--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,7 @@
   </head>
   <body>
   <nav>
-      <a href="/index.html" class="logo">Company</a>
+      <a href="index.html" class="logo">Company</a>
 
       <div id="burger" class="burger">
           <div></div>
@@ -25,13 +25,13 @@
 
       <div class="nav-links">
           <div class="nav-product">
-              <a href="/gallery.html">გალერეა</a>
-              <a href="/decoration.html">ყველა პროდუქცია</a>
-              <a href="/contact.html">კონტაქტი</a>
+              <a href="gallery.html">გალერეა</a>
+              <a href="decoration.html">ყველა პროდუქცია</a>
+              <a href="contact.html">კონტაქტი</a>
           </div>
           <div class="header-actions">
               <div class="cart">
-                  <a href="/cart.html" class="cart-text">კალათა</a>
+                  <a href="cart.html" class="cart-text">კალათა</a>
               </div>
           </div>
       </div>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="item-price">10.00 ლარი</div>
                 <div class="item-remove">
-                    <a href="/delete_cart/1">
+                    <a href="delete_cart">
                         <i class="fa-solid fa-trash"></i>
                     </a>
                 </div>
