--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav>
-      <a href="/index.html" class="logo">Company</a>
+      <a href="index.html" class="logo">Company</a>
       <div id="burger" class="burger">
           <div></div>
           <div></div>
@@ -23,13 +23,13 @@
       </div>
       <div class="nav-links">
           <div class="nav-product">
-              <a href="/gallery.html">გალერეა</a>
-              <a href="/decoration.html">ყველა პროდუქცია</a>
-              <a href="/contact.html">კონტაქტი</a>
+              <a href="gallery.html">გალერეა</a>
+              <a href="decoration.html">ყველა პროდუქცია</a>
+              <a href="contact.html">კონტაქტი</a>
           </div>
           <div class="header-actions">
               <div class="cart">
-                  <a href="/cart.html" class="cart-text">კალათა</a>
+                  <a href="cart.html" class="cart-text">კალათა</a>
               </div>
           </div>
       </div>
