--- a/decoration.html
+++ b/decoration.html
@@ -14,19 +14,20 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
   <nav>
-    <a href="index.html" class="logo">Company</a>
+    <a href="Final-course/index.html" class="logo">Company</a>
+
     <div id="burger" class="burger">
         <div></div>
         <div></div>
         <div></div>
     </div>
+
     <div class="nav-links">
         <div class="nav-product">
-            <a href="gallery.html">გალერეა</a>
-            <a href="decoration.html">ყველა პროდუქცია</a>
-            <a href="contact.html">კონტაქტი</a>
+            <a href="Final-course/gallery.html">გალერეა</a>
+            <a href="Final-course/decoration.html">ყველა პროდუქცია</a>
+            <a href="Final-course/contact.html">კონტაქტი</a>
         </div>
 
         <div class="header-actions">
@@ -36,6 +37,7 @@
         </div>
     </div>
 </nav>
+
 
  <section id="decorations" class="decor-products">
     <h1>ჩვენი დეკორაცია</h1>
