--- a/gallery.html
+++ b/gallery.html
@@ -15,18 +15,21 @@
   </head>
   <body>
     <nav>
-      <a href="index.html" class="logo">Company</a>
+      <a href="Final-course/index.html" class="logo">Company</a>
+
       <div id="burger" class="burger">
           <div></div>
           <div></div>
           <div></div>
       </div>
+
       <div class="nav-links">
           <div class="nav-product">
-              <a href="gallery.html">გალერეა</a>
-              <a href="decoration.html">ყველა პროდუქცია</a>
-              <a href="contact.html">კონტაქტი</a>
+              <a href="Final-course/gallery.html">გალერეა</a>
+              <a href="Final-course/decoration.html">ყველა პროდუქცია</a>
+              <a href="Final-course/contact.html">კონტაქტი</a>
           </div>
+
           <div class="header-actions">
               <div class="cart">
                   <a href="cart.html" class="cart-text">კალათა</a>
@@ -34,6 +37,7 @@
           </div>
       </div>
   </nav>
+
     <section class="gallery">
       <h1>ჩვენი კოლექცია</h1>
       <div class="gallery-grid">
