--- a/product_details.html
+++ b/product_details.html
@@ -28,14 +28,14 @@
 
       <div class="nav-links">
           <div class="nav-product">
-              <a href="gallery.html">გალერეა</a>
-              <a href="decoration.html">ყველა პროდუქცია</a>
-              <a href="contact.html">კონტაქტი</a>
+              <a href="Final-course/gallery.html">გალერეა</a>
+              <a href="Final-course/decoration.html">ყველა პროდუქცია</a>
+              <a href="Final-course/contact.html">კონტაქტი</a>
           </div>
 
           <div class="header-actions">
               <div class="cart">
-                  <a href="cart.html" class="cart-text">კალათა</a>
+                  <a href="Final-course/cart.html" class="cart-text">კალათა</a>
               </div>
           </div>
       </div>
@@ -76,7 +76,7 @@
                     <img src="/img/product1.jpg" alt="Related Product">
                     <h3>პროდუქცია</h3>
                     <p>10 ₾</p>
-                    <a href="cart.html">
+                    <a href="Final-course/cart.html">
                         <button class="add-to-cart">კალათში დამატება</button>
                     </a>
                 </div>
