--- a/cart.html
+++ b/cart.html
@@ -14,28 +14,30 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-  <nav>
-      <a href="index.html" class="logo">Company</a>
+    <nav>
+        <a href="Final-course/index.html" class="logo">Company</a>
 
-      <div id="burger" class="burger">
-          <div></div>
-          <div></div>
-          <div></div>
-      </div>
+        <div id="burger" class="burger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
 
-      <div class="nav-links">
-          <div class="nav-product">
-              <a href="gallery.html">გალერეა</a>
-              <a href="decoration.html">ყველა პროდუქცია</a>
-              <a href="contact.html">კონტაქტი</a>
-          </div>
-          <div class="header-actions">
-              <div class="cart">
-                  <a href="cart.html" class="cart-text">კალათა</a>
-              </div>
-          </div>
-      </div>
-  </nav>
+        <div class="nav-links">
+            <div class="nav-product">
+                <a href="Final-course/gallery.html">გალერეა</a>
+                <a href="Final-course/decoration.html">ყველა პროდუქცია</a>
+                <a href="Final-course/contact.html">კონტაქტი</a>
+            </div>
+
+            <div class="header-actions">
+                <div class="cart">
+                    <a href="cart.html" class="cart-text">კალათა</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
   <div class="main-container">
     <div class="cart-container">
         <h1>თქვენი კალათა</h1>
