--- a/cart.html
+++ b/cart.html
@@ -14,30 +14,28 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <nav>
-        <a href="Final-course/index.html" class="logo">Company</a>
+  <nav>
+      <a href="/index.html" class="logo">Company</a>
 
-        <div id="burger" class="burger">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+      <div id="burger" class="burger">
+          <div></div>
+          <div></div>
+          <div></div>
+      </div>
 
-        <div class="nav-links">
-            <div class="nav-product">
-                <a href="Final-course/gallery.html">გალერეა</a>
-                <a href="Final-course/decoration.html">ყველა პროდუქცია</a>
-                <a href="Final-course/contact.html">კონტაქტი</a>
-            </div>
-
-            <div class="header-actions">
-                <div class="cart">
-                    <a href="cart.html" class="cart-text">კალათა</a>
-                </div>
-            </div>
-        </div>
-    </nav>
-
+      <div class="nav-links">
+          <div class="nav-product">
+              <a href="/gallery.html">გალერეა</a>
+              <a href="/decoration.html">ყველა პროდუქცია</a>
+              <a href="/contact.html">კონტაქტი</a>
+          </div>
+          <div class="header-actions">
+              <div class="cart">
+                  <a href="/cart.html" class="cart-text">კალათა</a>
+              </div>
+          </div>
+      </div>
+  </nav>
   <div class="main-container">
     <div class="cart-container">
         <h1>თქვენი კალათა</h1>
@@ -53,7 +51,7 @@
                 </div>
                 <div class="item-price">10.00 ლარი</div>
                 <div class="item-remove">
-                    <a href="delete_cart">
+                    <a href="/delete_cart/1">
                         <i class="fa-solid fa-trash"></i>
                     </a>
                 </div>
