--- a/gallery.html
+++ b/gallery.html
@@ -15,29 +15,25 @@
   </head>
   <body>
     <nav>
-      <a href="Final-course/index.html" class="logo">Company</a>
-
+      <a href="/zindex.html" class="logo">Company</a>
       <div id="burger" class="burger">
           <div></div>
           <div></div>
           <div></div>
       </div>
-
       <div class="nav-links">
           <div class="nav-product">
-              <a href="Final-course/gallery.html">გალერეა</a>
-              <a href="Final-course/decoration.html">ყველა პროდუქცია</a>
-              <a href="Final-course/contact.html">კონტაქტი</a>
+              <a href="/gallery.html">გალერეა</a>
+              <a href="/decoration.html">ყველა პროდუქცია</a>
+              <a href="/contact.html">კონტაქტი</a>
           </div>
-
           <div class="header-actions">
               <div class="cart">
-                  <a href="cart.html" class="cart-text">კალათა</a>
+                  <a href="/cart.html" class="cart-text">კალათა</a>
               </div>
           </div>
       </div>
   </nav>
-
     <section class="gallery">
       <h1>ჩვენი კოლექცია</h1>
       <div class="gallery-grid">
