--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav>
-      <a href="Final-course/index.html" class="logo">Company</a>
+      <a href="/index.html" class="logo">Company</a>
 
       <div id="burger" class="burger">
           <div></div>
@@ -25,14 +25,14 @@
 
       <div class="nav-links">
           <div class="nav-product">
-              <a href="Final-course/gallery.html">გალერეა</a>
-              <a href="Final-course/decoration.html">ყველა პროდუქცია</a>
-              <a href="Final-course/contact.html">კონტაქტი</a>
+              <a href="/gallery.html">გალერეა</a>
+              <a href="/decoration.html">ყველა პროდუქცია</a>
+              <a href="/contact.html">კონტაქტი</a>
           </div>
 
           <div class="header-actions">
               <div class="cart">
-                  <a href="cart.html" class="cart-text">კალათა</a>
+                  <a href="/cart.html" class="cart-text">კალათა</a>
               </div>
           </div>
       </div>
@@ -61,19 +61,19 @@
         <img src="img/product1.jpg" alt="Product 1">
         <h2>ნივთი</h2>
         <p>120 ლ</p>
-        <a href="Final-course/product_details.html"><button>იხილეთ დეტალურად</button></a>
+        <a href="/product_details.html"><button>იხილეთ დეტალურად</button></a>
       </div>
       <div class="product-card">
         <img src="img/product2.jpg" alt="Product 2">
         <h2>ნივთი</h2>
         <p>80 ლ</p>
-        <a href="Final-course/product_details.html"><button>იხილეთ დეტალურად</button></a>
+        <a href="/product_details.html"><button>იხილეთ დეტალურად</button></a>
       </div>
       <div class="product-card">
         <img src="img/product3.jpg" alt="Product 3">
         <h2>ნივთი</h2>
         <p>150 ლ</p>
-        <a href="Final-course/product_details.html"><button>იხილეთ დეტალურად</button></a>
+        <a href="/product_details.html"><button>იხილეთ დეტალურად</button></a>
       </div>
     </section>
     <footer>
