--- a/product_details.html
+++ b/product_details.html
@@ -44,11 +44,11 @@
     <div class="product-container">
         <div class="image-info-container">
             <div class="main-image">
-                <img id="main-product-image" src="/img/product3.jpg" alt="Product Image" onclick="openLightbox(this.src)">
+                <img id="main-product-image" src="/img/product3.jpg" alt="Product Image">
             </div>
             <div class="thumbnail-images">
-                <img class="thumbnail" src="/img/product1.jpg" alt="Product Thumbnail" onclick="changeImage('/img/product1.jpg')">
-                <img class="thumbnail" src="/img/product2.jpg" alt="Product Thumbnail" onclick="changeImage('/img/product2.jpg')">
+                <img class="thumbnail" src="/img/product1.jpg" alt="Product Thumbnail">
+                <img class="thumbnail" src="/img/product2.jpg" alt="Product Thumbnail">
             </div>
             <div class="product-info">
                 <h1>პროდუქციის დასახელება</h1>
