--- a/decoration.html
+++ b/decoration.html
@@ -16,27 +16,28 @@
 <body>
 
   <nav>
-    <a href="/index.html" class="logo">Company</a>
+    <a href="index.html" class="logo">Company</a>
+
     <div id="burger" class="burger">
         <div></div>
         <div></div>
         <div></div>
     </div>
+
     <div class="nav-links">
         <div class="nav-product">
-            <a href="/gallery.html">გალერეა</a>
-            <a href="/decoration.html">ყველა პროდუქცია</a>
-            <a href="/contact.html">კონტაქტი</a>
+            <a href="gallery.html">გალერეა</a>
+            <a href="decoration.html">ყველა პროდუქცია</a>
+            <a href="contact.html">კონტაქტი</a>
         </div>
 
         <div class="header-actions">
             <div class="cart">
-                <a href="/cart.html" class="cart-text">კალათა</a>
+                <a href="cart.html" class="cart-text">კალათა</a>
             </div>
         </div>
     </div>
 </nav>
-
  <section id="decorations" class="decor-products">
     <h1>ჩვენი დეკორაცია</h1>
 
