--- a/product_details.html
+++ b/product_details.html
@@ -18,28 +18,28 @@
   </head>
   <body>
     <nav>
-      <a href="/index.html" class="logo">Company</a>
+        <a href="index.html" class="logo">Company</a>
 
-      <div id="burger" class="burger">
-          <div></div>
-          <div></div>
-          <div></div>
-      </div>
+        <div id="burger" class="burger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
 
-      <div class="nav-links">
-          <div class="nav-product">
-              <a href="/gallery.html">გალერეა</a>
-              <a href="/decoration.html">ყველა პროდუქცია</a>
-              <a href="/cart.html">კალათა</a>
-          </div>
+        <div class="nav-links">
+            <div class="nav-product">
+                <a href="gallery.html">გალერეა</a>
+                <a href="decoration.html">ყველა პროდუქცია</a>
+                <a href="contact.html">კონტაქტი</a>
+            </div>
 
-          <div class="header-actions">
-              <div class="cart">
-                  <a href="/cart.html" class="cart-text">კალათა</a>
-              </div>
-          </div>
-      </div>
-  </nav>
+            <div class="header-actions">
+                <div class="cart">
+                    <a href="cart.html" class="cart-text">კალათა</a>
+                </div>
+            </div>
+        </div>
+    </nav>
   <section id="product-detail" class="product-detail">
     <div class="product-container">
         <div class="image-info-container">
@@ -76,7 +76,7 @@
                     <img src="/img/product1.jpg" alt="Related Product">
                     <h3>პროდუქცია</h3>
                     <p>10 ₾</p>
-                    <a href="/cart.html">
+                    <a href="cart.html">
                         <button class="add-to-cart">კალათში დამატება</button>
                     </a>
                 </div>
