--- a/product_details.html
+++ b/product_details.html
@@ -44,11 +44,11 @@
     <div class="product-container">
         <div class="image-info-container">
             <div class="main-image">
-                <img id="main-product-image" src="/img/product3.jpg" alt="Product Image">
+                <img id="main-product-image" src="img/product3.jpg" alt="Product Image">
             </div>
             <div class="thumbnail-images">
-                <img class="thumbnail" src="/img/product1.jpg" alt="Product Thumbnail">
-                <img class="thumbnail" src="/img/product2.jpg" alt="Product Thumbnail">
+                <img class="thumbnail" src="img/product1.jpg" alt="Product Thumbnail">
+                <img class="thumbnail" src="img/product2.jpg" alt="Product Thumbnail">
             </div>
             <div class="product-info">
                 <h1>პროდუქციის დასახელება</h1>
@@ -73,7 +73,7 @@
             </div>
             <div class="owl-carousel owl-theme" id="related-products-list">
                 <div class="related-product-card">
-                    <img src="/img/product1.jpg" alt="Related Product">
+                    <img src="img/product1.jpg" alt="Related Product">
                     <h3>პროდუქცია</h3>
                     <p>10 ₾</p>
                     <a href="cart.html">
