--- a/cart.html
+++ b/cart.html
@@ -43,7 +43,7 @@
         <div id="cartItems">
             <div class="cart-item">
                 <div class="image-container">
-                    <img src="/img/product1.jpg" alt="Product">
+                    <img src="img/product1.jpg" alt="Product">
                 </div>
                 <div class="item-details">
                     <h2>პროდუქცია</h2>
